# dices

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GAME.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  games.vcxproj  games.vcxproj.filters
chaos/: a.out  allgather.cpp  alltoall.cpp  bug1  bug2  bug3  gather.cpp  hostconf  matrix.cpp  mm  mxv.cpp  omp_bug1.c  omp_bug2.c  omp_bug3.c  omp_getEnvInfo.c  omp_mm.c  omp_orphan.c  omp_pi  omp_pi_reduction  omp_reduction.c  omp_workshare1.c  omp_workshare2.c  orphan  pi.c  sum_probe.c  topo.cpp  try.c  woreshare
games.dir/Debug/: games.exe.recipe
games.dir/Debug/games.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  games.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Shader.hpp  camera.h  camera.hpp  geom.h  glpre.h  glpre.hpp  gltype.hpp  glvar.hpp  magic_cube.hpp  mesh.hpp  models.hpp  stb_image.hpp
include/glad/: glad.h
lib/win/: glfw3.lib
shaders/: cubes.fs  dice.fs  edge.fs  img.fs  texture.vs  trans.fs  trans.vs
src/: .gitignore  Shader.cpp  geom.cpp  glad.c  glpre.cpp  glvar.cpp  magic_cube.cpp  main.cpp  mesh.cpp  models.cpp
